# fastapi-scraper

./: .gitignore  README.md  main.py  products.json  pyproject.toml  scraper.py
api/: dependencies.py  models.py  routing.py  scraper.py
api/routers/: scrape.py
api/services/: console_notification_service.py  json_db_service.py  redis_cache_service.py
interfaces/: cache_interface.py  database_interface.py  notifications_interface.py
scraper/: scraper_service.py
